# pydepict

./: .flake8  .gitignore  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg
pydepict/: consts.py  errors.py  parser.py
src/: main.py
src/pydepict/: __init__.py  __main__.py  consts.py  depicter.py  errors.py  models.py  parser.py  renderer.py  types.py  utils.py
src/pydepict/depicter/: __init__.py  consts.py  models.py
src/pydepict/parser/: __init__.py  consts.py
src/pydepict/renderer/: __init__.py  consts.py
tests/: conftest.py  timing.py
tests/parser/: conftest.py  test_atoms.py  test_bonds.py  test_chain.py  test_charges.py  test_class.py  test_digit.py  test_elements.py  test_fill_hydrogens.py  test_hcount.py  test_hydrogens.py  test_isotopes.py  test_numbers.py  test_organic.py  test_remainder.py  test_resolve_rnums.py  test_rnums.py  test_stream.py  test_terminators.py  utils.py
tests/renderer/: __init__.py  test_dev.py  test_graph.py  utils.py
