[metadata]
name = pydepict
version = 1.0.0
description = SMILES parsing and molecule graph depiction
long_description = file: README.rst
long_description_content_type = text/x-rst
author = William Lee 
author_email = wwflee1@sheffield.ac.uk
license = MIT
license_file = LICENSE
url = https://github.com/WilliamWFLee/pydepict
# TODO: classifiers = 


[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
install_requires =
    networkx==2.6.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8==4.0.1
    black==22.1.0
test =
    pytest==7.0.1
    pytest-ordering==0.6
    pytest-mock==3.7.0
    pytest-cov==3.0.0
