[metadata]
name = pydepict
version = 0.1.1.post2
description = Library for SMILES parsing and molecular graph depiction.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = William Lee 
author_email = wwflee1@sheffield.ac.uk
license = MIT
url = https://github.com/WilliamWFLee/pydepict
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Chemistry
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.7
# See requirements.txt for install_requires

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8>=4.0,<4.1
    black>=22.3,<23.0
test =
    pytest>=7.1,<7.2
    pytest-order>=1.0,<1.1
    pytest-mock>=3.8,<3.9
    pytest-cov>=3.0,<3.1
dist =
    build>=0.8,<0.9
    twine>=4.0,<4.1
    setuptools>=42

[options.entry_points]
console_scripts =
    pydepict = pydepict.__main__:main
